# cli

./: Cargo.toml  LICENSE  README.md
.github/: dependabot.yml
src/: install.rs  macros.rs  main.rs  uninstall.rs  versions.rs
src/install/: utils.rs
