[package]
name = "amethyst"
authors = ["Amethyst Core"]
description = "CLI Tool to interact with the Amethyst core in your terminal"
repository = "https://github.com/amethyst-core/cli"
readme = "README.md"
keywords = ["cli", "amethyst", "minecraft", "server", "management"]

version = "0.1.0"
edition = "2021"

[dependencies]
clap = "3.0"
color-eyre = "0.6.3"
serde = { version = "1.0.203", features = ["derive"] }
dirs = "5.0.1"
reqwest = { version = "0.12.4", features = ["blocking", "json"] }
# self-replace = "1.3.7"
# self_update = "0.40.0"
semver = { version = "1.0.23", features = ["serde"] }
# tempfile = "3.10.1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde_json = "1.0.117"
